cargo-features = ["per-package-target"]

[package]
name = "octox"
description = "Unix like Operating System"
edition = "2021"
license.workspace = true
version.workspace = true
forced-target = "riscv64gc-unknown-none-elf"

[workspace.package]
version = "0.1.0"
license = "MIT/Apache-2.0"

[[bin]]
name = "octox"
path = "src/kernel/main.rs"

[workspace]
members = [
    "src/kernel",
    "src/mkfs",
    "src/user",
]

[workspace.dependencies]
libkernel = { path = "src/kernel", default-features = false }

[dependencies]
libkernel = { workspace = true, features = ["kernel"] }
