cargo-features = ["per-package-target"]

[package]
name = "libkernel"
description = "A Rust-based library kernel"
edition = "2021"
version.workspace = true
license.workspace = true
forced-target = "riscv64gc-unknown-none-elf"

[lib]
name = "kernel"
path = "lib.rs"

[features]
default = ["kernel"]
kernel = []

[dependencies]
